feat : add swagger docummentation for update store
